RESOLVED FIXED182441
More ARM64_32 fixes.
https://bugs.webkit.org/show_bug.cgi?id=182441
Summary More ARM64_32 fixes.
Mark Lam
Reported 2018-02-02 10:58:38 PST
My previous speculative ARM64_32 build fix in copyLCharsFromUCharSource() was wrong. I've now fixed it to use choose the default case instead of the ARM64 case if the target is ARM64_32. I also disabled more dynamicPoisoning code in ARM64_32. This code assumes a 64-bit pointer which is not applicable here.
Attachments
proposed patch. (4.26 KB, patch)
2018-02-02 11:06 PST, Mark Lam
mitz: review+
patch for landing. (4.29 KB, patch)
2018-02-02 11:16 PST, Mark Lam
no flags
Radar WebKit Bug Importer
Comment 1 2018-02-02 11:00:43 PST
Mark Lam
Comment 2 2018-02-02 11:06:36 PST
Created attachment 332982 [details] proposed patch.
Mark Lam
Comment 3 2018-02-02 11:16:54 PST
Created attachment 332985 [details] patch for landing.
Mark Lam
Comment 4 2018-02-02 12:25:21 PST
Thanks for the review. Landed in r228022: <http://trac.webkit.org/r228022>.
Note You need to log in before you can comment on or make changes to this bug.