More ARM64_32 fixes. https://bugs.webkit.org/show_bug.cgi?id=182441 <rdar://problem/37162310>

Reviewed by Dan Bernstein.

Source/JavaScriptCore:

I also disabled more dynamicPoisoning code in ARM64_32.  This code assumes a
64-bit pointer which is not applicable here.

* jit/AssemblyHelpers.cpp:
(JSC::AssemblyHelpers::emitDynamicPoison):
(JSC::AssemblyHelpers::emitDynamicPoisonOnLoadedType):
(JSC::AssemblyHelpers::emitDynamicPoisonOnType):

Source/WTF:

My previous speculative ARM64_32 build fix in copyLCharsFromUCharSource() was wrong.
I've now fixed it to choose the default implementation case instead of the ARM64
case if the target is ARM64_32.

* wtf/text/ASCIIFastPath.h:
(WTF::copyLCharsFromUCharSource):



Canonical link: https://commits.webkit.org/198239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228022 268f45cc-cd09-0410-ab3c-d52691b4dbfc