Source/JavaScriptCore/jit/AssemblyHelpers.cpp
@@ -1009,7 +1009,7 @@ void AssemblyHelpers::emitPreparePreciseIndexMask32(GPRReg index, GPRReg length,
 
 void AssemblyHelpers::emitDynamicPoison(GPRReg base, GPRReg poisonValue)
 {
-#if CPU(X86_64) || CPU(ARM64)
+#if CPU(X86_64) || (CPU(ARM64) && !defined(__ILP32__))
     lshiftPtr(TrustedImm32(40), poisonValue);
     addPtr(poisonValue, base);
 #else
@@ -1020,7 +1020,7 @@ void AssemblyHelpers::emitDynamicPoison(GPRReg base, GPRReg poisonValue)
 
 void AssemblyHelpers::emitDynamicPoisonOnLoadedType(GPRReg base, GPRReg actualType, JSType expectedType)
 {
-#if CPU(X86_64) || CPU(ARM64)
+#if CPU(X86_64) || (CPU(ARM64) && !defined(__ILP32__))
     xor32(TrustedImm32(expectedType), actualType);
     emitDynamicPoison(base, actualType);
 #else
@@ -1032,7 +1032,7 @@ void AssemblyHelpers::emitDynamicPoisonOnLoadedType(GPRReg base, GPRReg actualTy
 
 void AssemblyHelpers::emitDynamicPoisonOnType(GPRReg base, GPRReg scratch, JSType expectedType)
 {
-#if CPU(X86_64) || CPU(ARM64)
+#if CPU(X86_64) || (CPU(ARM64) && !defined(__ILP32__))
     load8(Address(base, JSCell::typeInfoTypeOffset()), scratch);
     emitDynamicPoisonOnLoadedType(base, scratch, expectedType);
 #else
